plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sesac'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

bootJar {
	archiveBaseName = 'boheommong'
	archiveVersion = ''           // 혹은 '0.0.1'처럼 원하는 버전
	archiveFileName = 'boheommong.jar'   // 최종 산출물 파일 이름
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// mysql
	runtimeOnly 'com.mysql:mysql-connector-j'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// csv
	implementation 'org.apache.commons:commons-csv:1.9.0'

	// jwt
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'

	// OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Google Authenticator (TOTP)
	implementation('com.warrenstrange:googleauth:1.4.0') {
		exclude group: 'org.apache.httpcomponents', module: 'httpclient'
	}

	// 최신 버전 명시
	implementation 'org.apache.httpcomponents:httpclient:4.5.14'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	implementation 'net.minidev:json-smart:2.4.7'

}

tasks.named('test') {
	useJUnitPlatform()
}
